--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:potionk/neverland-web.git"
+    "url": "git@github.com:potionk/lafuta-translate.git"
   },
   "dependencies": {
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "@coreui/react": "^2.5.1",
+    "@google-cloud/translate": "^6.0.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -28,6 +29,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "google-translate-api": "^2.3.0",
     "http-proxy-middleware": "^1.0.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
