--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
-    "google-translate-api": "^2.3.0",
     "http-proxy-middleware": "^1.0.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
@@ -39,6 +38,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.3.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "react-scripts": "^3.3.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "npm-run-all --parallel start:**",
