--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-iframe": "^1.8.0",
     "react-markdown": "^4.3.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
